--- a/pkinfo2300/package.json
+++ b/pkinfo2300/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "express": "^4.17.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
